fix publish and index

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "eslint-plugin-brackets",
   "version": "0.1.1",
   "description": "ESLint style rules for minimizing diffs with line breaks around brackets",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "npm run clean && babel lib -d dist",
     "clean": "rimraf coverage dist",
     "lint": "eslint .",
     "lint:watch": "esw -w",
-    "publish": "npm run build && npm publish",
+    "prepublish": "npm run build",
     "test": "jest --config=jest-dev.json",
     "test:ci": "npm run lint && npm run build && npm run test:dist && npm run test -- --coverage && codecov",
     "test:dist": "jest --config=jest-dist.json",
